# Lucy

Benchmark/: BenchmarkTests.cpp  BenchmarkTests.h  BenchmarkTestsApp.cpp  CMakeLists.txt  plotScript.sh
Benchmark/B1Planner/: B1Planner.cpp  B1Planner.h  B1RRT.cpp  B1RRT.h  B1Ranking.cpp  readme.txt
Benchmark/Hope/: HopePlanner.cpp  HopePlanner.h  HopePlanner_Plotting.cpp  HopePlanner_Search.cpp
Benchmark/Hope/myFunctions/: CheckObject.cpp  CheckObject.h  CheckProcess.cpp  CheckProcess.h  Dijkstra.cpp  Dijkstra.h
Benchmark/Hope/rosFunctions/include/bfs_3d/: bfs_3d.h
Benchmark/Hope/rosFunctions/include/distance_field/: distance_field.h
Benchmark/Hope/rosFunctions/src/: bfs_3d.cpp  pf_distance_field.cpp  propagation_distance_field.cpp
Benchmark/Jacobian/: CMakeLists.txt  JacobianTests.cpp  JacobianTests.h  JacobianTestsApp.cpp
Benchmark/RRT/: RRT.cpp  RRT.h  RRTPlanner.cpp  RRTPlanner.h
Homo/: CMakeLists.txt  Edge.cpp  Edge.h  HP2D.cpp  HP2D.h  Vertice.cpp  Vertice.h  test.cpp
RST_Summer_Code/: README.txt
RST_Summer_Code/Hope/: .lastload  CMakeLists.txt  Hope.cpp  HopePlanner.cpp  HopePlanner.h  HopeTab.cpp  HopeTab.h  armState.cpp  armState.h  dijkstra.cpp  dijkstra.h  search.cpp  search.h  test.cpp
RST_Summer_Code/Hope/myFunctions/include/: CheckObject.h  CheckProcess.h
RST_Summer_Code/Hope/myFunctions/src/: CheckObject.cpp  CheckProcess.cpp
RST_Summer_Code/Hope/rosFunctions/include/distance_field/: pf_distance_field.h  propagation_distance_field.h
RST_Summer_Code/PCL_Viewer/: CMakeLists.txt  pcd_visualize.cpp  pcd_write.cpp  simple_viewer.cpp
RST_Summer_Code/TesterTab/: A3d.cc  A3d.h  B_RRT.cpp  B_RRT.h  CMakeLists.txt  JG_RRT.cpp  JG_RRT.h  JTRRT.txt  JT_RRT.cpp  JT_RRT.h  M_RRT.cpp  M_RRT.h  MyRSC.cpp  MyRSC.h  MyTester.cpp  MyTesterPlanner.cpp  MyTesterPlanner.h  MyTesterTab.cpp  MyTesterTab.h  ParSmoother.cpp  ParSmoother.h  Planner1.cpp  Planner1.h  WS_RRT.cpp  WS_RRT.h  goWSOrient.cpp  goWSOrient.h  goWSPos.cpp  goWSPos.h  utilities.cpp  utilities.h
RST_Summer_Code/TesterTab/voxelSuite/: BinaryVoxel.cpp  BinaryVoxel.h  CMakeLists.txt  CheckObject.cpp  CheckObject.h  CheckProcess.cpp  CheckProcess.h  EDT.cpp  EDT.h  lineTraversal.cpp  lineTraversal.h  test.cpp
